      of case) when parsing JSON.
  * CMake build now installs .pc files for programs that link to libbson using
    pkg-config. Both the CMake and Autotools build systems now install .cmake
    files for programs that link to libbson using CMake. Linking to libbson
    statically or dynamically is now much more convenient.
  * Minimum required CMake version has been increased to 3.1.
  * CMake remains experimental on non-Windows platforms and issues a warning now
  * New functions
    * bson_strcasecmp, a portable equivalent of strcasecmp.
    * bson_iter_as_double, cast the current value to double.
    * bson_iter_init_from_data, creates an iterator from BSON string.
    * bson_validate_with_error, checks a document like bson_validate does but
      also reports which key was invalid
  * New convenience macros
    * BSON_ITER_HOLDS_INT, checks if iterator holds int32 or int64
    * BSON_ITER_HOLDS_NUMBER, checks if iterator holds int32, int64 or double
  * Raised BSON recursion limit to 200


Libbson-1.6.0
=============

It is my pleasure to announce libbson-1.6.0.

New features and bug fixes:

  * Use jsonsl instead of libyajl as our JSON parsing library, parse JSON more
    strictly, fix minor parsing bugs.
  * Extended JSON documents like '{"$code": "...", "$scope": {}}' are now parsed
    into BSON "code" elements.
  * ISO8601 dates now allow years from 0000 to 9999 inclusive. Before, years
    before 1970 were prohibited.
  * BSON floats and ints are now distinguished in JSON output.
  * The library is now built and continuously tested with MinGW-W64 on Windows.
  * The documentation is ported from Mallard XML to ReStructured Text, the
    HTML documentation is restyled, and numerous man page syntax errors fixed.
  * All public functions now have the __cdecl calling convention on Windows.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Aleksander Melnikov
  * Remi Collet

Peace,
